--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "aceblog-server-ts",
   "version": "1.0.0",
   "description": "Aceblog sever written in TypeScript",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "env-cmd -f ./config/dev.env nodemon ./src/server.ts"
   },
   "author": "Chiemekam Anyanwu-Ebere",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
     "env-cmd": "^10.1.0",
